Updated links and removed not needed zip file

--- a/html/popup.html
+++ b/html/popup.html
@@ -28,7 +28,7 @@
 <div class="content m-3">
 	<p>Issues/Extension not working?
 		<br>
-		File an issue </p>
+		File an issue <a href="https://github.com/arjunsrinivasan1997/DisableYtFeatures/issues" target="_blank">here</a></p>
 </div>
 
 </body>
